--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,8 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@gsbenevides2'
-      - name: Install Yarn
-        run: npm install -g yarn
       - name: Install and Build 🔧
-        run: 
-          yarn install
-          yarn build
-          yarn build:docs
+        run: yarn install && yarn build && yarn build:docs
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
