--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,7 @@ jobs:
             registry-url: 'https://npm.pkg.github.com'
             scope: '@gsbenevides2'
       - name: Install and Build 🔧
-        run:
-          yarn
-          yarn build
+        run: yarn install && yarn build
       - name: Deploy 🚀
         run: |
           echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" > ~/.npmrc
