--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Install and Build 🔧
         run: yarn install && yarn build
       - name: Deploy 🚀
-        run: |
-          echo "//npm.pkg.github.com/:_authToken=${{secrets.GITHUB_TOKEN}}" > ~/.yarnrc.yml
-          yarn publish --access public
+        run: yarn publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          
+        
         
