--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ink-form",
+  "name": "@gsbenevides2/ink-form",
   "type": "module",
   "version": "2.0.1",
   "description": "Complex user-friendly form component for React Ink",
@@ -18,10 +18,10 @@
     "commandline",
     "cmd"
   ],
-  "repository": "https://github.com/lukasbach/ink-form",
+  "repository": "https://github.com/gsbenevides2/ink-form",
   "author": "Lukas Bach <lbach@outlook.de>",
   "license": "MIT",
-  "bugs": "https://github.com/lukasbach/ink-form/issues",
+  "bugs": "https://github.com/gsbenevides2/ink-form/issues",
   "devDependencies": {
     "@types/node": "^14.14.45",
     "@types/react": "^18.2.41",
@@ -56,7 +56,8 @@
     "ink-text-input": "^6.0.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   },
   "publish": {
     "preScripts": "build,build:docs,lint",
